--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "open": "^7.3.0",
-    "promptly": "^3.2.0"
+    "promptly": "^3.2.0",
+    "twilio": "^3.54.0"
   },
   "devDependencies": {
     "jest": "^26.6.3"
